# crypto-node

./: .deepsource.toml  .gitignore  Cargo.toml  README.md
.github/actions/macos-dependencies/: action.yml
.github/actions/ubuntu-dependencies/: action.yml
.github/workflows/: ci.yml  release.yml
consensus/obj-asteroid/: Cargo.toml
consensus/obj-asteroid/src/: icosphere.rs  lib.rs  perlin.rs  rng.rs  shape.rs
consensus/obj-asteroid/tests/: determinism.rs  spectral.rs
consensus/poscan-pow/: Cargo.toml
consensus/poscan-pow/src/: lib.rs
consensus/poscan/src/: lib.rs
consensus/sc-consensus-pow/: Cargo.toml
consensus/sc-consensus-pow/src/: lib.rs  worker.rs
consensus/sha256pow/: Cargo.toml
consensus/sha256pow/src/: lib.rs
docs/: how-to-build.md
docs/contributor/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  STYLE_GUIDE.md  github-labels.md
node/: Cargo.toml  README.md
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  eth.rs  main.rs  mining_rpc.rs  object_rpc.rs  rpc.rs  service.rs
pallets/difficulty/: Cargo.toml  README.md
pallets/difficulty/src/: asert.rs  lib.rs  mock.rs  tests.rs
pallets/prime/src/: lib.rs  tests.rs
pallets/reward/: Cargo.toml
pallets/reward/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs
pallets/validator/: Cargo.toml
pallets/validator/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml  build.rs
runtime/benches/: verify_wasm.rs
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  inherent_checks.rs  lib.rs
runtime/src/configs/: evm.rs  governance.rs  mod.rs
runtime/tests/: evm.rs  fees.rs  governance.rs  opengov.rs  prime_brakes.rs  proxy.rs  referenda_submission.rs  timestamp_drift.rs
runtime/tests/common/: mod.rs
scripts/: rotate-keys.sh
tests/evm-tooling/: README.md
tests/evm-tooling/scripts/: README.md  package.json  transfer-ethers.js  transfer-precompile.js  withdraw-to-substrate.js
tests/integration/: README.md  package-lock.json  package.json
tests/integration/js-scripts/: evm-precompile-roundtrip.js
tests/integration/scenarios/: 08-evm-tooling.zndsl  99-evm-placeholder.zndsl
tests/integration/scripts/: run-all.sh
zombienet/evm-tooling/: README.md
zombienet/evm-tooling/foundry/: README.md  foundry.toml
zombienet/evm-tooling/foundry/script/: Deploy.s.sol
zombienet/evm-tooling/foundry/src/: Token.sol
zombienet/evm-tooling/hardhat/: README.md  hardhat.config.js  package-lock.json  package.json
zombienet/evm-tooling/hardhat/contracts/: Token.sol
zombienet/evm-tooling/hardhat/scripts/: deploy.js
zombienet/evm-tooling/hardhat/test/: NativeErc20.test.js  Token.test.js
zombienet/evm-tooling/scripts/: README.md  package.json  query-web3.js  transfer-ethers.js  transfer-precompile.js  withdraw-to-substrate.js
zombienet/integration/: README.md  package-lock.json  package.json  zombienet.toml
zombienet/integration/js-scripts/: lib.js
zombienet/integration/scenarios/01-miner-reward-and-finality/: miner-reward-and-finality.js  zombienet.zndsl
zombienet/integration/scenarios/02-asert-anchor-reset/: assert-anchor-reset.js  wait-difficulty-halved.js  zombienet.zndsl
zombienet/integration/scenarios/06-validator-offline-kick-rejoin/: cooldown-and-rejoin.js  wait-baseline.js  wait-offline-kick.js  zombienet.zndsl
zombienet/integration/scenarios/07-validator-equivocation-kick-rejoin/: equivocation-kick-and-rejoin.js  zombienet.zndsl
zombienet/integration/scripts/: build-node.sh  run-all.sh
