[workspace.package]
license = "MIT"
authors = ["motoZ-crypto"]
homepage = "https://github.com/motoZ-crypto/crypto"
repository = "https://github.com/motoZ-crypto/crypto.git"
edition = "2021"

[workspace]
members = [
    "consensus/sc-consensus-pow",
    "consensus/sha256pow",
    "node",
    "pallets/difficulty",
    "pallets/reward",
    "pallets/validator",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
solochain-template-runtime = { path = "./runtime", default-features = false }
sha256pow = { path = "./consensus/sha256pow", default-features = false }
pallet-difficulty = { path = "./pallets/difficulty", default-features = false }
pallet-reward = { path = "./pallets/reward", default-features = false }
pallet-validator = { path = "./pallets/validator", default-features = false }
clap = { version = "4.6.0" }
futures = { version = "0.3.32" }
futures-timer = { version = "3.0.3" }
jsonrpsee = { version = "0.24.3" }
sha2 = { version = "0.11.0", default-features = false }
async-trait = { version = "0.1.88" }
log = { version = "0.4.27" }
parking_lot = { version = "0.12.3" }
thiserror = { version = "1.0.69" }
frame-benchmarking-cli = { version = "54.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.14.0", default-features = false }
frame-system = { version = "46.0.0", default-features = false }
pallet-transaction-payment = { version = "46.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "49.0.0", default-features = false }
sc-basic-authorship = { version = "0.54.0", default-features = false }
sc-cli = { version = "0.58.0", default-features = false }
sc-client-api = { version = "45.0.0", default-features = false }
sc-consensus = { version = "0.55.0", default-features = false }
sc-consensus-aura = { version = "0.56.0", default-features = false }
sc-consensus-grandpa = { version = "0.41.0", default-features = false }
sc-consensus-grandpa-rpc = { version = "0.41.0", default-features = false }
sc-consensus-pow = { path = "./consensus/sc-consensus-pow", default-features = false }
sc-executor = { version = "0.48.0", default-features = false }
sc-network = { version = "0.56.0", default-features = false }
sc-offchain = { version = "51.0.0", default-features = false }
sc-rpc = { version = "51.0.0", default-features = false }
sc-service = { version = "0.57.0", default-features = false }
sc-telemetry = { version = "30.0.1", default-features = false }
sc-transaction-pool = { version = "45.0.0", default-features = false }
sc-transaction-pool-api = { version = "44.0.0", default-features = false }
sp-api = { version = "41.0.0", default-features = false }
sp-block-builder = { version = "41.0.0", default-features = false }
sp-blockchain = { version = "44.0.0", default-features = false }
sp-consensus = { version = "0.47.0", default-features = false }
sp-consensus-aura = { version = "0.47.0", default-features = false }
sp-core = { version = "40.0.0", default-features = false }
sp-genesis-builder = { version = "0.22.0", default-features = false }
sp-inherents = { version = "41.0.0", default-features = false }
sp-io = { version = "45.0.0", default-features = false }
sp-keyring = { version = "46.0.0", default-features = false }
sp-runtime = { version = "46.0.0", default-features = false }
sp-timestamp = { version = "41.0.0", default-features = false }
substrate-frame-rpc-system = { version = "50.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-prometheus-endpoint = { version = "0.17.7", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
frame-benchmarking = { version = "46.0.0", default-features = false }
frame-executive = { version = "46.0.0", default-features = false }
frame-support = { version = "46.0.0", default-features = false }
frame-system-benchmarking = { version = "46.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "41.0.0", default-features = false }
frame-try-runtime = { version = "0.52.0", default-features = false }
pallet-aura = { version = "45.0.0", default-features = false }
pallet-authorship = { version = "46.0.0", default-features = false }
pallet-balances = { version = "47.0.0", default-features = false }
pallet-grandpa = { version = "46.0.0", default-features = false }
pallet-im-online = { version = "45.0.0", default-features = false }
pallet-session = { version = "46.0.0", default-features = false, features = ["historical"] }
pallet-sudo = { version = "46.0.0", default-features = false }
pallet-timestamp = { version = "45.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "46.0.0", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.149", default-features = false }
sp-consensus-grandpa = { version = "28.0.0", default-features = false }
sp-consensus-pow = { version = "0.47.0", default-features = false }
sp-offchain = { version = "41.0.0", default-features = false }
sp-session = { version = "43.0.0", default-features = false }
sp-staking = { version = "43.0.0", default-features = false }
sp-storage = { version = "23.0.0", default-features = false }
sp-transaction-pool = { version = "41.0.0", default-features = false }
sp-version = { version = "44.0.0", default-features = false }
substrate-wasm-builder = { version = "32.0.0", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

