[package]
name = "obj-asteroid"
description = "Procedural Asteroid Generator"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
libm.workspace = true
rand_pcg = { workspace = true, default-features = false }
rand_core = { workspace = true, default-features = false }
spectral3d.workspace = true
